# facebook_page_insights_client

./: .env  README.md  pyproject.toml
facebook/page/insights/: __init__.py  fb_page_insight.py
python_fb_page_insights_client/: __init__.py  fb_page_insight.py
src/: __init__.py  index.html
src/facebook/page/insights/: fb_page_insight.py
tests/: test_fb_page_insights.py
